user routing fixed, form css aligned

--- a/react-app/src/components/LoginFormPage/LoginForm.css
+++ b/react-app/src/components/LoginFormPage/LoginForm.css
@@ -91,3 +91,8 @@
     flex-direction: column;
     align-items: center;
 }
+
+.centerme {
+    display: flex;
+    justify-content: flex-end;
+}
